[package]
name = "master-node"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "The master node for the cargo-outdated-bot"

[[bin]]
name = "master-node"
path = "src/bin/master-node.rs"
doc = false

[dependencies]
slog-async = "2.2.0"
slog-term = "2.3.0"
slog = "2.1.1"
crates-index = "0.10.0"
structopt = "0.1.7"
structopt-derive = "0.1.6"
serde_derive = "1.0.27"
serde = "1.0.27"
configure = "0.1.1"
configure_derive = "0.1.1"
failure = "0.1.1"
failure_derive = "0.1.1"
