[package]
name = "master-node"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "The master node for the cargo-outdated-bot"

[[bin]]
name = "master-node"
path = "src/bin/master-node.rs"
doc = false

[dependencies]
config = "0.8.0"
crates-index = "0.10.0"
diesel = "1.1.1"
dotenv = "0.10.1"
failure = "0.1.1"
failure_derive = "0.1.1"
serde = "1.0.27"
serde_derive = "1.0.27"
slog = "2.1.1"
slog-async = "2.2.0"
slog-json = "2.2.0"
structopt = "0.1.7"
structopt-derive = "0.1.6"
serde_json = "1.0.9"
